Fixed Ant build script in the sqfx project, to build with JavaFX SDK.
- the build.xml script now has javafx.sdk.dir property which must be
correctly set to point to a local JavaFX SDK installation, in order to
build properly with JavaFX-dependent code in the sqfx project

- the launcher scripts, squirrel-sql.bat and squirrel-sql.sh, define a
new JAVAFX_SDK_LIB variable to point to a local JavaFX SDK's lib
directory. This JAVAFX_SDK_LIB variable is set empty by default in the
scripts, and are packaged like so in the resulting zip distribution
file, thus making the zip distribution portable across Windows/Linux/Mac
systems

- once the portable zip distribution is unzipped, the user is required
to set the JAVAFX_SDK_LIB variable in the scripts to point to a local
JavaFX SDK installation's lib directory, e.g.
C:\dev\javafx-sdk-11.0.2\lib, before running the script to launch the
SquirrelSQLFX application

- the above requirements can be alleviated when relevant Gradle build
script is available for the project, to produce OS-specific zip
distribution which includes JavaFX native libraries and works right out
of the box

- for development, the build.xml script defines a new 'runApp' target to
launch the application via Ant, using the 'ant runApp' command